# Verom-AI-Immigration-Compliance

./: BUILD_PLAN.md  CLAUDE.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
claude_memory/: CLAUDE.md  README.md  memory.py  memory_mcp.py  requirements.txt  schema.sql
claude_memory/memory/: decisions-log.md  last-session.md  open-questions.md  project-state.md
claude_memory/tests/: test_memory.py
frontend/: anti-fraud-policy.html  applicant-protection.html  applicant.html  attorney-code-of-conduct.html  attorney-terms.html  attorney.html  calendar.html  case-workspace.html  document-collection.html  escrow-terms.html  family-bundle.html  forms-workspace.html  index.html  landing.html  login.html  migrate.html  onboarding-applicant.html  onboarding-attorney.html  packets.html  petition-letter.html  privacy.html  rfe-response.html  terms.html  workbench.html
frontend/css/: applicant.css  attorney.css  landing.css  styles.css  voxlen.css
frontend/js/: api.js  app.js  applicant.js  attorney.js  auth.js  i18n.js  voxlen.js
tests/: test_api.py  test_attorney_match.py  test_attorney_service.py  test_auth.py  test_billing.py  test_calendar_sync.py  test_case_workspace.py  test_client_chatbot.py  test_completeness_scorer.py  test_conflict_check.py  test_consultation_booking.py  test_continuous_improvement.py  test_crawler.py  test_differentiation.py  test_document_intake.py  test_document_management.py  test_document_qa.py  test_domination.py  test_efiling_proxy.py  test_family_bundle.py  test_filing_fees_dependencies_pd.py  test_form_population.py  test_gap_closers.py  test_gate_test.py  test_intake_engine.py  test_lead_management.py  test_legal_research.py  test_migration_importer.py  test_new_features.py  test_notification_service.py  test_onboarding.py  test_packet_assembly.py  test_persistent_store.py  test_petition_letter.py  test_regulatory_impact.py  test_rfe_predictor.py  test_rfe_response.py  test_soc_code.py  test_stickiness.py  test_sticky_features.py  (+9 more)
(+91 files in other folders)
