[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-immigration-compliance"
version = "0.1.0"
description = "AI-powered immigration compliance monitoring and risk assessment system"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.6",
    "PyJWT>=2.12.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "mypy>=1.19.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
